Issue #DTW-37: Increased border contrast

--- a/source/_patterns/00-elements/04-text/fieldsets.scss
+++ b/source/_patterns/00-elements/04-text/fieldsets.scss
@@ -1,5 +1,5 @@
 fieldset {
-  border-color: $color-gray-lighter;
+  border-color: $color-gray-light;
   border-radius: 10px;
 }
 
